feat(backend): v2 Phase B 管理员角色鉴权 + 店铺乐观锁
引入管理员角色与并发改店铺防覆盖，对应 docs/06 Phase B（B1–B8）。

- DDL/种子：t_user 加 role(USER/ADMIN)、t_shop 加 version；
  data.sql 种 admin 占位账号（占位哈希不可登录，提权走注册后 UPDATE role='ADMIN'）
- 安全链：JWT 带 role claim；LoginUser 输出 ROLE_<role>；
  SecurityConfig 增 /api/v1/admin/** hasRole(ADMIN)（置于 anyRequest 前）
- 管理员端点：PUT /api/v1/admin/shops/{id}；AdminShopService selectById→
  覆盖可改字段→updateById（@Version），affected==0 映射
  ResultCode.SHOP_VERSION_CONFLICT(409)——MP 冲突返回 0 不抛异常
- MybatisPlusConfig 链入 OptimisticLockerInnerInterceptor（置于分页前）
- 测试：AdminShopServiceImplTest（Mockito，mvn test 通过）+
  AdminShopServiceIT（@SpringBootTest + Testcontainers MySQL，-DRUN_IT=true）
- 文档：docs/01/02/04/05 + CLAUDE.md 同步角色、乐观锁、409、PUT 端点

Co-Authored-By: Claude <noreply@anthropic.com>